:sparkles: Implementing GlobalControllerExceptionHandler with i18n (#10)
Implementing GlobalHandlerException
